--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@storybook/react": "^7.6.6",
     "@storybook/react-vite": "^7.6.6",
     "@storybook/test": "^7.6.6",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^3.1.0",
     "msw": "^1.2.1",
     "msw-storybook-addon": "^1.10.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.6",
+    "typescript": "^5.4.5",
     "vite": "^4.2.0"
   },
   "resolutions": {
