--- a/package.json
+++ b/package.json
@@ -16,19 +16,22 @@
     "init-msw": "msw init public/"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.6",
-    "@storybook/addon-interactions": "^7.6.6",
-    "@storybook/addon-links": "^7.6.6",
-    "@storybook/blocks": "^7.6.6",
-    "@storybook/react": "^7.6.6",
-    "@storybook/react-vite": "^7.6.6",
-    "@storybook/test": "^7.6.6",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
+    "@chromatic-com/storybook": "^1.3.3",
+    "@storybook/addon-a11y": "^8.0.9",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/addon-interactions": "^8.0.9",
+    "@storybook/addon-links": "^8.0.9",
+    "@storybook/blocks": "^8.0.9",
+    "@storybook/icons": "^1.2.9",
+    "@storybook/react": "^8.0.9",
+    "@storybook/react-vite": "^8.0.9",
+    "@storybook/test": "^8.0.9",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "msw": "^1.2.1",
-    "msw-storybook-addon": "^1.10.0",
-    "storybook": "^7.6.6",
+    "msw": "^2.0.0",
+    "msw-storybook-addon": "^2.0.0",
+    "storybook": "^8.0.9",
     "typescript": "^5.4.5",
     "vite": "^4.2.0"
   },
