--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "React and Storybook",
   "type": "module",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2"
   },
   "scripts": {
     "dev": "vite",
