--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "init-msw": "msw init public/",
-    "test-storybook": "test-storybook"
+    "test-storybook": "test-storybook",
+    "chromatic": "npx chromatic --project-token=chpt_0718dc33ebd410d"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
@@ -33,6 +34,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "chromatic": "^11.3.0",
     "msw": "^2.0.0",
     "msw-storybook-addon": "^2.0.0",
     "storybook": "^8.0.9",
