--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "init-msw": "msw init public/",
-    "test-storybook": "test-storybook",
-    "chromatic": "npx chromatic --project-token=chpt_0718dc33ebd410d"
+    "test-storybook": "test-storybook"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
