--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "react-storybook-taskbox",
+  "name": "react-storybook-ui-testing",
   "version": "0.1.0",
-  "description": "React and Storybook",
+  "description": "React Storybook with UI Testing",
   "type": "module",
+  "private": false,
+  "license": "MIT",
+  "author": {
+    "name": "Shanthosh Krishnakumar",
+    "email": "kkshanthosh@gmail.com"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nzkks/react-storybook-taskbox"
+    "url": "https://github.com/nzkks/react-storybook-ui-testing"
   },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@storybook/test-runner": "^0.17.0",
@@ -45,7 +52,7 @@
     "vite": "^4.2.0"
   },
   "resolutions": {
-    "jackspeak": "2.1.1"
+    "jackspeak": "2.3.6"
   },
   "msw": {
     "workerDirectory": [
